--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "country-code-lookup": "0.0.17",
+    "gh-pages": "^2.2.0",
+    "homepage": "https://github.com/ShubhayanS/COVID19-RealTimeMap",
     "mapbox-gl": "^1.9.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -15,6 +17,8 @@
     "swr": "^0.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
